# kanji-learning-app

./: CMakeLists.txt  README.md
.github/workflows/: deploy.yml
app/: .clang-format  .gitignore  CMakeLists.txt
app/src/: app.cpp  config.cpp  config.h  controller.cpp  controller.h  generate_token.cpp  kanji.h  main.cpp  resources.h  resources.rc.in
app/src/auth/: auth_service.cpp  auth_service.h  jwt_middleware.cpp  telegram_auth.cpp  telegram_auth.h
app/src/database/: database_context.cpp  database_context.h  kanji_repository.cpp  kanji_repository.h  review_state_repository.cpp  review_state_repository.h  sqlite_connection.cpp  sqlite_connection.h
app/src/notification/: notification_service.h  review_notifier.cpp  review_notifier.h  telegram_notification_service.cpp  telegram_notification_service.h
app/src/system/: linux_platform_info.cpp  platform_info.h  resource.h  windows_platform_info.cpp  windows_resource.cpp
app/src/utils/: crypto.cpp
app/src/wallpaper/: stb_image_write.h  stb_truetype.h  wallpaper_service.cpp  wallpaper_service.h
app/test/: test_wanikani_sheduler.cpp
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css
ui/src/components/: App.css  App.tsx  CompletionScreen.tsx  FlashCard.tsx  Header.tsx  KanjiListScreen.css  KanjiListScreen.tsx  ReviewScreen.tsx
ui/src/core/: mockTransport.ts  transport.ts  transportFactory.ts
ui/src/hooks/: useKanjiReview.ts
